Fix for jumping css

--- a/less/chat.less
+++ b/less/chat.less
@@ -205,7 +205,7 @@ camera {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1099px) {
   // chat-container is a hack
   .chat-container {
     height: 75%;
